# 15na-ap

./: .gitignore  .gitignore.in  .gitmodules  CMakeLists.txt  Config.py  LICENSE.md  README.md  Server.py  common.cpp  common.hpp  core.hpp  csi.log.cpp  keras.hpp  log.hpp  main.core.cpp  opt.core.cpp  proc.keras.cpp  soc.log.cpp
FunctionalPlus-prefix/tmp/: FunctionalPlus-cfgcmd.txt
core/: core.hpp  main.core.cpp  opt.core.cpp
csi/: csi.hpp  socket.csi.cpp  struct.csi.cpp
frugally-deep-prefix/tmp/: frugally-deep-cfgcmd.txt
keras/: keras.hpp  proc.keras.cpp
nlohmann_json-prefix/tmp/: nlohmann_json-cfgcmd.txt
src/: 15na.cpp  15na.hpl  common.cpp  common.hpp  poscas.cpp  poscas.hpl  poscas.hpp  syaa.cpp  syaa.hpl
src/core/: core.hpp  init.core.cpp  main.core.cpp  opt.core.cpp  proc.core.cpp
src/csi/: connector_users.csi.hpp  csi.hpl  csi.hpp  lorcon.csi.cpp  math.csi.cpp  socket.csi.cpp  struct.csi.cpp  window.csi.cpp
src/keras/: keras.cpp  keras.hpp  proc.keras.cpp
src/ws/: event.ws.cpp  interface.ws.cpp  send.ws.cpp  server.ws.cpp  ws.cpp  ws.hpl  ws.hpp
ws/: server.ws.cpp  ws.hpp
